--- a/site/index.qmd
+++ b/site/index.qmd
@@ -1,27 +1,33 @@
 ---
-title: "Projeto BD Ambiental"
+title: ""
 ---
 
-# Objetivos
-- Coleta & metadados (fontes, licenças, cobertura)
-- Tratamento & integração (tabelas, séries, shapefiles/rasters)
-- EDA, modelagem estatística/econométrica e visualizações
-- Reprodutibilidade (R/Python, ambientes, trilhas de auditoria)
-- Pacotes (R e Python) para automatizar o processo
+# Projeto BD Ambiental
 
-::: callout-note
-Cada etapa possui scripts, logs e *checklists* de auditoria.
+Repositório e plataforma de dados ambientais: coleta, documentação, tratamento, integração e análises com foco em pesquisa e políticas públicas.
+
+::: {.grid .cols-3}
+:::{.card}
+### Visão geral dos objetivos
+- Coletar e documentar (metadados, fontes, licenças)  
+- Padronizar e integrar (tabelas, séries, geodados)  
+- Análises, modelagem e visualizações  
+- Reprodutibilidade e trilhas de auditoria  
+- Pacotes R/Python  
 :::
 
-## Navegação rápida
-- [Catálogo de Dados](data_catalog/index.qmd)
-- [Pipelines](pipelines/index.qmd)
-- [Análises](analysis/index.qmd)
-- [Visualizações](viz/index.qmd)
-- [Pacotes](packages/index.qmd)
+:::{.card}
+### Estágio atual (Cronograma)
+1. Levantamento e documentação  
+2. ETL geoespacial e séries  
+3. Análises e dashboards  
+4. Pacotes e automações  
+:::
 
-## Estrutura de código
-Os códigos de trabalho ficam em `_SCRIPTS_BD_AMBIENTAL/` (R e Python).  
-Relatórios e documentação final são renderizados aqui no site via Quarto.
-
-<!-- trigger build 2025-09-20T17:33:39 -->
+:::{.card}
+### Avisos
+- Metadados: semana 38  
+- Datasets climáticos em validação  
+- `bdambientalR` (alpha)  
+:::
+:::
