fix(site): normalize SITE frontmatter and YAML (remove tabs/duplicates), clean index.qmd and _quarto.yml

--- a/SITE/index.qmd
+++ b/SITE/index.qmd
@@ -1,19 +1,16 @@
 ---
-title: ""
+title: "EcoHub — Início"
+format:
+  html:
+    toc: false
+    css: assets/styles.css
 ---
 
-**AVISOS TEMPORÁRIOS -- VERSÃO ALPHA DO SITE**
+**AVISOS TEMPORÁRIOS — VERSÃO ALPHA DO SITE**
 
-O CONTEÚDO DO SITE AINDA SERÁ INSERIDO, MAS A ESTRUTURA ATUAL, PARA VALIDAÇÃO E SUGESTÕES, FOI PENSADA DA SEGUINTE FORMA:
+O conteúdo abaixo é uma página inicial de rascunho com a estrutura prevista para o projeto.
 
-* Página clean e intuitiva, com poucos menus/seções.
-* Menus diretamente relacionados ao Projeto BD Ambiental foram centralizados na barra superior.
-* Páginas auxiliares (indiretamente ligados ao projeto) -- cursos, tutoriais, dicas, links externos etc -- serão agregadas no menu gaveta (sanduíche), localizado no canto direito da página.
-* O botão de pesquisar (ícone de lupa) também está localizado no canto direito da página, ao lado do menu gaveta/sanduíche.
-* A ideia é que o site seja interativo, permitindo postagens pelos participantes do projeto sem a necessidade de codificar (a definir e construir isso futuramente).
-
-*Versão atual: 30/09/2025 23:07 PM (f.) 
-
+*Versão atual: 30/09/2025*
 
 # Projeto BD Ambiental
 
