--- a/SITE/index.qmd
+++ b/SITE/index.qmd
@@ -69,6 +69,7 @@ format:
 
 <!-- LEGENDA -->
 <div class="legend">
+  <span class="legend-title">FASE:</span>
   <span class="badge fase0">Pendente</span> A Iniciar
   <span class="legend-gap"></span>
   <span class="badge fase1">Fase 1</span> Levantamento
@@ -89,6 +90,7 @@ format:
       <span class="badge fase1">Fase 1</span>
     </div>
     <p>Relação de áreas em malha/terras e procedimentos de regularização.</p>
+    <span class="badge-origem origem-brasil">Brasil</span>
   </a>
 
   <!-- CAR -->
@@ -98,6 +100,7 @@ format:
       <span class="badge fase0">Pendente</span>
     </div>
     <p>Cadastro Ambiental Rural: APP, RL e polígonos declarados.</p>
+    <span class="badge-origem origem-brasil">Brasil</span>
   </a>
 
   <!-- MapBiomas -->
@@ -107,6 +110,7 @@ format:
       <span class="badge fase0">Pendente</span>
     </div>
     <p>Séries de uso e cobertura da terra (coleções anuais).</p>
+    <span class="badge-origem origem-terceiro">Terceiro Setor</span>
   </a>
 
   <!-- INPE - PRODES / DETER -->
@@ -116,6 +120,7 @@ format:
       <span class="badge fase0">Pendente</span>
     </div>
     <p>Monitoramento anual e em tempo real do desmatamento na Amazônia e Cerrado.</p>
+    <span class="badge-origem origem-brasil">Brasil</span>
   </a>
 
   <!-- ANA - Hidroweb / SNIRH -->
@@ -125,6 +130,7 @@ format:
       <span class="badge fase0">Pendente</span>
     </div>
     <p>Dados hidrológicos e de qualidade da água em bacias e estações de monitoramento.</p>
+    <span class="badge-origem origem-brasil">Brasil</span>
   </a>
 
   <!-- ICMBio - UCs -->
@@ -134,6 +140,7 @@ format:
       <span class="badge fase0">Pendente</span>
     </div>
     <p>Limites, categorias e atributos das unidades de conservação federais.</p>
+    <span class="badge-origem origem-brasil">Brasil</span>
   </a>
 
   <!-- RAIS / CAGED -->
@@ -143,6 +150,7 @@ format:
       <span class="badge fase0">Pendente</span>
     </div>
     <p>Emprego formal e estrutura produtiva municipal, para análises socioeconômicas.</p>
+    <span class="badge-origem origem-brasil">Brasil</span>
   </a>
 
   <!-- SEEG -->
@@ -152,6 +160,7 @@ format:
       <span class="badge fase0">Pendente</span>
     </div>
     <p>Emissões de gases de efeito estufa por setor e município, desde 1970.</p>
+    <span class="badge-origem origem-terceiro">Terceiro Setor</span>
   </a>
 
   <!-- INMET / BDMEP -->
@@ -161,6 +170,7 @@ format:
       <span class="badge fase0">Pendente</span>
     </div>
     <p>Dados meteorológicos diários e séries históricas de temperatura e precipitação.</p>
+    <span class="badge-origem origem-brasil">Brasil</span>
   </a>
 
   <!-- SICONFI / FINBRA -->
@@ -170,6 +180,7 @@ format:
       <span class="badge fase0">Pendente</span>
     </div>
     <p>Finanças públicas municipais, com foco em receitas, despesas e gastos ambientais.</p>
+    <span class="badge-origem origem-brasil">Brasil</span>
   </a>
 
   <!-- SIDRA (IBGE) -->
@@ -179,6 +190,7 @@ format:
       <span class="badge fase0">Pendente</span>
     </div>
     <p>Estatísticas territoriais e socioeconômicas municipais.</p>
+    <span class="badge-origem origem-brasil">Brasil</span>
   </a>
 
   <!-- IPEADATA (IPEA) -->
@@ -188,6 +200,7 @@ format:
       <span class="badge fase0">Pendente</span>
     </div>
     <p>Indicadores macro, fiscais e ambientais agregados.</p>
+    <span class="badge-origem origem-brasil">Brasil</span>
   </a>
 
   <!-- Bacen -->
@@ -197,6 +210,7 @@ format:
       <span class="badge fase0">Pendente</span>
     </div>
     <p>Séries financeiras, crédito rural e indicadores bancários.</p>
+    <span class="badge-origem origem-brasil">Brasil</span>
   </a>
 
   <!-- DOF -->
@@ -206,6 +220,7 @@ format:
       <span class="badge fase0">Pendente</span>
     </div>
     <p>Origem florestal, transporte e cadeia madeireira.</p>
+    <span class="badge-origem origem-brasil">Brasil</span>
   </a>
 
   <!-- SEMA-MT -->
@@ -215,8 +230,23 @@ format:
       <span class="badge fase0">Pendente</span>
     </div>
     <p>CAR estadual, licenciamentos ambientais, multas, monitoramentos e autorizações ambientais estaduais.</p>
+    <span class="badge-origem origem-regional">Regional</span>
   </a>
 
+</div>
+
+<!-- LEGENDA DE ORIGEM -->
+<div class="legend">
+  <span class="legend-title">ORIGEM:</span>
+  <span class="badge-origem origem-brasil">Brasil</span> Governo Federal
+  <span class="legend-gap"></span>
+  <span class="badge-origem origem-regional">Regional</span> Estados e Municípios
+  <span class="legend-gap"></span>
+  <span class="badge-origem origem-terceiro">Terceiro Setor</span> ONGs
+  <span class="legend-gap"></span>
+  <span class="badge-origem origem-privada">Iniciativa Privada</span> Empresas
+  <span class="legend-gap"></span>
+  <span class="badge-origem origem-internacional">Internacional</span> Órgãos globais
 </div>
 
 ```
