--- a/descritiva provisório/principal.qmd
+++ b/descritiva provisório/principal.qmd
@@ -3,6 +3,12 @@ title: "Análise descritivas RAMT"
 format: html
 ---
 
+```{r}
+#| echo: false
+library(tidyverse)
+
+```
+
 ## 1.Sobre os dados
 
 Os dados dos RAMT (Relatórios de Análise do Mercado de Terras) são elaborados pelo INCRA a partir da análise de diferentes mercados de terras em todo o território nacional, sendo essas terras tratadas como zonas homogêneas. Estas zonas são *clusters* (agrupamentos homogêneos com características semelhantes) que, a partir de então, têm seu valor analisado tendo em vista o uso da terra e as dinâmicas desses diferentes mercados. Os *clusters* são formados com base em um conjunto de variáveis: vocação produtiva da terra, gestão econômica e atividades agrícolas, nível tecnológico e a concentração fundiária (tendo em vista o índice de Gini fundiário). A metodologia de clusterização adotada é a de Ward, criando uma árvore de clusters inicialmente que depois é diferenciada por meio de algoritmos de K-means. O tratamento estatístico pressupõe uma distribuição aproximadamente normal dentro da zona homogênea. Os índices de inflação são corrigidos segundo o IGP-DI. Esse procedimento de clusterização é feito dentro de uma superintendência regional do INCRA.
@@ -16,3 +22,36 @@ $$
 A otimização do procedimento de cluster é feito por meio do processo de "K-means". Esse algoritmo forma K grupos diversos de municípios que posteriormente serão modificados movendo cidades de um local ao outro de modo a maximizar ou minimizar a função, aumentando a qualidade do cluster.
 
 ## 2.Distribuições, histogramas e Plots.
+
+Box Plot, distribuição VTN por Estado no ano de 2023.
+
+```{r}
+#| echo: true
+ggplot(dados_todos_estados, aes(x = reorder(UF.x, vtn_media, FUN = median), y = vtn_media)) +
+  geom_boxplot(fill = "steelblue", alpha = 0.7) +
+  scale_y_continuous(labels = scales::comma) + # Formata eixo Y para não ficar notação científica
+  labs(
+    title = "Distribuição do Valor da Terra Nua por Estado (2023)",
+    subtitle = "MÉDIA GERAL",
+    x = "Estados (Ordenados por Mediana)",
+    y = "VTN Médio (R$)"
+  ) +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5)) 
+```
+
+Box Plot, distribuição VTI por Estado no ano de 2023.
+
+```{r}
+ggplot(dados_todos_estados, aes(x = reorder(UF.x, vti_media, FUN = median), y = vti_media)) +
+  geom_boxplot(fill = "steelblue", alpha = 0.7) +
+  scale_y_continuous(labels = scales::comma) +
+  labs(
+    title = "Distribuição do Valor da Terra Nua por Estado (2023)",
+    subtitle = "MÉDIA GERAL",
+    x = "Estados (Ordenados por Mediana)",
+    y = "VTI Médio (R$)"
+  ) +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5)) 
+```
