--- a/descritiva provisório/principal.qmd
+++ b/descritiva provisório/principal.qmd
@@ -3,10 +3,37 @@ title: "Análise descritivas RAMT"
 format: html
 ---
 
-```{r}
+```{r} 
 #| echo: false
-library(tidyverse)
+#| message: false
+#| warning: false
+#| include: false
 
+library(tidyverse)
+library(geobr)
+library(ipeadatar)
+library(stringr)
+library(readr)
+library(sf)
+library(gtsummary)
+library(gt)
+
+df_analise <- st_read(
+  dsn   = "C:/Users/jodom/OneDrive/Área de Trabalho/df_classificado.gpkg",
+  layer = "df_classificado",
+  quiet = TRUE   # ou o nome de camada que você usou no st_write
+)
+
+df_eco1 <- df_analise |> select(-c("df", "desc_chave"))
+
+df_areas <- df_analise |>
+  mutate(
+    # 1. Calcula a área (retorna em m^2 [units])
+    area_m2 = st_area(geom),
+    
+    # 2. Converte para Hectares e remove o tipo 'units' para evitar erros em gráficos
+    area_ha_calculada = as.numeric(area_m2) / 10000
+  )
 ```
 
 ## 1.Sobre os dados
@@ -21,37 +48,458 @@ $$
 
 A otimização do procedimento de cluster é feito por meio do processo de "K-means". Esse algoritmo forma K grupos diversos de municípios que posteriormente serão modificados movendo cidades de um local ao outro de modo a maximizar ou minimizar a função, aumentando a qualidade do cluster.
 
-## 2.Distribuições, histogramas e Plots.
+O banco de dados estrutura-se em 18 variáveis, organizadas para capturar a dinâmica espacial e econômica do mercado de terras. As observações são indexadas temporalmente (ano) e geograficamente (code_muni, UF, origem), assegurando a identificação unívoca dos registros dos Relatórios de Análise do Mercado de Terras (RAMT).
 
-Box Plot, distribuição VTN por Estado no ano de 2023.
+As variáveis econômicas decompõem-se em tríades métricas (mínimo, médio e máximo) para o Valor da Terra Nua (VTN) e Valor da Terra com Imóvel (VTI). Estatisticamente, estes limites não são arbitrários: segundo a metodologia do INCRA, eles delimitam o intervalo de validade amostral.
 
+Para fins analíticos, a heterogeneidade das classificações originais (tipologia) foi harmonizada na variável categoria_final, garantindo consistência sintática. A dimensão espacial é preservada pela geometria vetorial (geom), habilitando operações de geoprocessamento
 ```{r}
-#| echo: true
-ggplot(dados_todos_estados, aes(x = reorder(UF.x, vtn_media, FUN = median), y = vtn_media)) +
-  geom_boxplot(fill = "steelblue", alpha = 0.7) +
-  scale_y_continuous(labels = scales::comma) + # Formata eixo Y para não ficar notação científica
-  labs(
-    title = "Distribuição do Valor da Terra Nua por Estado (2023)",
-    subtitle = "MÉDIA GERAL",
-    x = "Estados (Ordenados por Mediana)",
-    y = "VTN Médio (R$)"
-  ) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 90, vjust = 0.5)) 
+colnames(df_eco1)
 ```
 
-Box Plot, distribuição VTI por Estado no ano de 2023.
+O procedimento de unificação de categorias foi feito através do seguinte loop, sendo o loop taxativo, esse loop foi construído com ajuda do gemini, após um processo de verificação das tipologias via a função unique do package "dyplr":
 
 ```{r}
-ggplot(dados_todos_estados, aes(x = reorder(UF.x, vti_media, FUN = median), y = vti_media)) +
-  geom_boxplot(fill = "steelblue", alpha = 0.7) +
-  scale_y_continuous(labels = scales::comma) +
+#| eval: false
+#| code-fold: true
+df_classificado <- resultado_igpdi_limpo %>%
+  mutate(
+    # 1. tratamento dos nomes para garantir o match exato
+    desc_chave = stri_trans_general(tipologia_de_uso, "Latin-ASCII"),
+    desc_chave = str_to_lower(str_trim(desc_chave)),
+    
+    # 2. Mapeamento Linear (152 Itens) - Saída padronizada em minúsculo e sem acento
+    categoria_final = case_when(
+      
+      # --- AGRICULTURA ---
+      desc_chave == "agricultura graos soja e milho" ~ "agricultura",
+      desc_chave == "agricultura" ~ "agricultura",
+      desc_chave == "agricola" ~ "agricultura",
+      desc_chave == "terra agricola" ~ "agricultura",
+      desc_chave == "agricultural" ~ "agricultura",
+      desc_chave == "lavoura" ~ "agricultura",
+      desc_chave == "hortifrutigranjeiro" ~ "agricultura",
+      desc_chave == "cafe (arabica e conilon" ~ "agricultura",
+      desc_chave == "cafe conilon" ~ "agricultura",
+      desc_chave == "cafe (arabica e conilon)" ~ "agricultura",
+      desc_chave == "cafe arabica" ~ "agricultura",
+      desc_chave == "agricultura- graos diversos" ~ "agricultura",
+      desc_chave == "agricultura-graos diversos" ~ "agricultura",
+      desc_chave == "fruticultura laranja" ~ "agricultura",
+      desc_chave == "agricola - graos diversos" ~ "agricultura",
+      desc_chave == "horticultura/olericultura/granjeiros" ~ "agricultura",
+      desc_chave == "culturas anuais" ~ "agricultura",
+      desc_chave == "cultura anual" ~ "agricultura",
+      desc_chave == "cafe" ~ "agricultura",
+      desc_chave == "agricultura anual" ~ "agricultura",
+      desc_chave == "cafeicultura" ~ "agricultura",
+      desc_chave == "medias propriedades em terras de cultura" ~ "agricultura",
+      desc_chave == "terras de cultura com disponibilidade de agua para irrigacao" ~ "agricultura",
+      desc_chave == "terras de cafe" ~ "agricultura",
+      desc_chave == "agricola-graos soja" ~ "agricultura",
+      desc_chave == "terra de agricultura" ~ "agricultura",
+      desc_chave == "terra de agricultura com cana-de-aa?aocar em relevo movimentado" ~ "agricultura",
+      desc_chave == "1- agricola" ~ "agricultura",
+      desc_chave == "agricultura familiar" ~ "agricultura",
+      desc_chave == "fruticultura" ~ "agricultura",
+      desc_chave == "exploracao granjeira" ~ "agricultura",
+      desc_chave == "terra de exploracao agricola" ~ "agricultura",
+
+      # --- PECUÁRIA ---
+      desc_chave == "pecuaria" ~ "pecuaria",
+      desc_chave == "pecuaria a oeste do mercado" ~ "pecuaria",
+      desc_chave == "pecuana" ~ "pecuaria",
+      desc_chave == "pecuaria-bovino-pastagem formada" ~ "pecuaria",
+      desc_chave == "pecuaria - bovino-pastagem formada" ~ "pecuaria",
+      desc_chave == "pecuaria-bovino-pastagem formada." ~ "pecuaria",
+      desc_chave == "pecuaria - bovino -pastagem formada" ~ "pecuaria",
+      desc_chave == "pecuaria-diversos" ~ "pecuaria",
+      desc_chave == "pecuaria-bovino -pastagem formada" ~ "pecuaria",
+      desc_chave == "pecuaria - bovino - pastagem formada" ~ "pecuaria",
+      desc_chave == "pastagem" ~ "pecuaria",
+      desc_chave == "terras para pastejo" ~ "pecuaria",
+      desc_chave == "terras com pastagem" ~ "pecuaria",
+      desc_chave == "solos com pastagens e potencial para culturas" ~ "pecuaria",
+      desc_chave == "pecuaria com potencial agricultura" ~ "pecuaria",
+      desc_chave == "terras de pastagem geral" ~ "pecuaria",
+      desc_chave == "pecuaria bovino-pastagem formada" ~ "pecuaria",
+      desc_chave == "pecuaria." ~ "pecuaria",
+      desc_chave == "terra para pecuaria" ~ "pecuaria",
+      desc_chave == "pecuaria de alta a baixa representatividade" ~ "pecuaria",
+      desc_chave == "terra de pecuaria" ~ "pecuaria",
+      desc_chave == "terra de pecua!ria" ~ "pecuaria",
+      desc_chave == "3- pecuaria" ~ "pecuaria",
+      desc_chave == "2- pecuaria" ~ "pecuaria",
+      desc_chave == "pecuaria/pastagem formada" ~ "pecuaria",
+      desc_chave == "terra de exploracao pecuaria" ~ "pecuaria",
+      desc_chave == "pecuaria (bovinos e pastagem plant)" ~ "pecuaria",
+
+      # --- EXPLORAÇÃO MISTA ---
+      desc_chave == "fazenda" ~ "exploracao mista",
+      desc_chave == "exploracao misra" ~ "exploracao mista",
+      desc_chave == "exploracao mista" ~ "exploracao mista",
+      desc_chave == "exploracao mista (fazenda)" ~ "exploracao mista",
+      desc_chave == "explotacao mista" ~ "exploracao mista",
+      desc_chave == "mista" ~ "exploracao mista",
+      desc_chave == "atividade mista" ~ "exploracao mista",
+      desc_chave == "exploracao mista - agricola + pastagem" ~ "exploracao mista",
+      desc_chave == "exploracao mista agricola + pastagem" ~ "exploracao mista",
+      desc_chave == "exploracao mista - agricola + pastagem+ diversificada" ~ "exploracao mista",
+      desc_chave == "exploracao mista agricola pastagem" ~ "exploracao mista",
+      desc_chave == "exploracao mista agricola + pastagem + floresta plantada" ~ "exploracao mista",
+      desc_chave == "exploracao mista agricola + pastagem + diversificada" ~ "exploracao mista",
+      desc_chave == "mosaico de pastagens, florestas abertas e vegetacao degradada com babacu/babacual" ~ "exploracao mista",
+      desc_chave == "mosaico de vegetacao" ~ "exploracao mista",
+      desc_chave == "exploracao mista (pastagens e culturas)" ~ "exploracao mista",
+      desc_chave == "uso misto (pecuaria/agricultura)" ~ "exploracao mista",
+      desc_chave == "uso misto (pecuaria/agricultura/reflorestamento)" ~ "exploracao mista",
+      desc_chave == " agropecuario" ~ "exploracao mista",
+      desc_chave == "agropecuaria" ~ "exploracao mista",
+      desc_chave == "exploracao mista-agricola + pecuaria" ~ "exploracao mista",
+      desc_chave == "exploracao mista (lavoura e pecuaria)" ~ "exploracao mista",
+      desc_chave == "terra de exploracao mista" ~ "exploracao mista",
+      desc_chave == "terra de exploraa?a?o mista" ~ "exploracao mista",
+      desc_chave == "exploracao mista (aquicultura/agricultura irrigada)" ~ "exploracao mista",
+      desc_chave == "1- exploracao mista" ~ "exploracao mista",
+      desc_chave == "2- exploracao mista" ~ "exploracao mista",
+      desc_chave == "exploradio mista" ~ "exploracao mista",
+      desc_chave == "exploracao mista (agricultura e/ou pecuaria)" ~ "exploracao mista",
+      desc_chave == "agricultura e pecuaria" ~ "exploracao mista",
+      desc_chave == "agropecuario" ~ "exploracao mista",
+
+      # --- VEGETAÇÃO NATIVA ---
+      desc_chave == "floresta mata nativa" ~ "vegetacao nativa",
+      desc_chave == "vegetacao nativa" ~ "vegetacao nativa",
+      desc_chave == "vegetacao nativa floresta amazonica" ~ "vegetacao nativa",
+      desc_chave == "floresta" ~ "vegetacao nativa",
+      desc_chave == "cerrado" ~ "vegetacao nativa",
+      desc_chave == "mata" ~ "vegetacao nativa",
+      desc_chave == "cerrado-vegetacao nativa" ~ "vegetacao nativa",
+      desc_chave == "vegetacao nativa - cerrado" ~ "vegetacao nativa",
+      desc_chave == "vegetacao nativa- cerrado" ~ "vegetacao nativa",
+      desc_chave == "vegetacao nativa*" ~ "vegetacao nativa",
+      desc_chave == "vegetacao nativa *" ~ "vegetacao nativa",
+      desc_chave == "terras de cerrado arenosas" ~ "vegetacao nativa",
+      desc_chave == "regeneracao/mata" ~ "vegetacao nativa",
+      desc_chave == "2- vetetacao nativa" ~ "vegetacao nativa",
+      desc_chave == "4- vegetacao nativa" ~ "vegetacao nativa",
+      desc_chave == "3- vegetacao nativa" ~ "vegetacao nativa",
+      desc_chave == "vetetacao nativa" ~ "vegetacao nativa",
+      desc_chave == "lavrado" ~ "vegetacao nativa",
+      desc_chave == "floresta natural (mata)" ~ "vegetacao nativa",
+      desc_chave == "vegetacao nativa (mata)" ~ "vegetacao nativa",
+      desc_chave == "vegetacao nativa - mata atlantica" ~ "vegetacao nativa",
+      desc_chave == "vegetacao nativa (mata atlantica)" ~ "vegetacao nativa",
+      desc_chave == "terra com mata" ~ "vegetacao nativa",
+
+      # --- SILVICULTURA ---
+      desc_chave == "seringal" ~ "silvicultura",
+      desc_chave == "silvicultura" ~ "silvicultura",
+      desc_chave == "terras para reflorestamento" ~ "silvicultura",
+      desc_chave == "floresta plantadasilvicultura" ~ "silvicultura",
+      desc_chave == "floresta plantada" ~ "silvicultura",
+      desc_chave == "reflorestamento" ~ "silvicultura",
+      desc_chave == "vegetacao nativa/silvicultura" ~ "silvicultura",
+      desc_chave == "vegetacao nativa/sivicultura" ~ "silvicultura",
+
+      # --- AQUICULTURA ---
+      desc_chave == "carcinicultura" ~ "aquicultura",
+      desc_chave == "carcinicltura" ~ "aquicultura",
+      desc_chave == "nao agricola - carcinicultura" ~ "aquicultura",
+
+      # --- NÃO AGRÍCOLA / URBANO ---
+      desc_chave == "nao agricola" ~ "nao agricola",
+      desc_chave == "sitios e chacaras" ~ "nao agricola",
+      desc_chave == "especulacao imobiliaria" ~ "nao agricola",
+      desc_chave == "lazer (sitios/chacaras)" ~ "nao agricola",
+
+      # --- TERRA NUA ---
+      desc_chave == "terra nua" ~ "terra nua",
+
+      # --- MEDIA GERAL (Antigo Outros) ---
+      desc_chave == "geral" ~ "media geral",
+      desc_chave == "uso indefinido (media geral do mrt)" ~ "media geral",
+      desc_chave == "media geral (uso indefinido)" ~ "media geral",
+      desc_chave == "media geral" ~ "media geral",
+      desc_chave == "uso indefinido (media geral)" ~ "media geral",
+      desc_chave == "usa indefinido (media geral)" ~ "media geral",
+      desc_chave == "uso indefinido" ~ "media geral",
+      desc_chave == "todas as tipologias (media geral)" ~ "media geral",
+      desc_chave == "uso indefinido media geral" ~ "media geral",
+      desc_chave == "uso indefinido (macdia geral do mrt)" ~ "media geral",
+      desc_chave == "todas as tipologias" ~ "media geral",
+      desc_chave == "amostra geral" ~ "media geral",
+      desc_chave == "geral (todas as tipologias)" ~ "media geral",
+      desc_chave == "media geral mrt1" ~ "media geral",
+      desc_chave == "media geral mrt2" ~ "media geral",
+      desc_chave == "media geral mrt3" ~ "media geral",
+      desc_chave == "media geral mrt4" ~ "media geral",
+      desc_chave == "media geral mrt7" ~ "media geral",
+      desc_chave == "media geral mrt8" ~ "media geral",
+      desc_chave == "media geral mrt9" ~ "media geral",
+      desc_chave == "media geral mrt10" ~ "media geral",
+      desc_chave == "uso indef nido (media geral do mrt)" ~ "media geral",
+      desc_chave == "uso indef hido (media geral do mrt)" ~ "media geral",
+      desc_chave == "todas as tipologias do mrt" ~ "media geral",
+
+      # Safety Net
+      TRUE ~ "revisar manualmente"
+    )
+  )
+
+```
+
+## 2.Disponibilidade dos dados
+A coleta de dados dos relatórios RAMT apresenta significativa heterogeneidade entre as superintendências regionais do INCRA. A base de dados abrange o período de 2016 a 2025, com destaque para o ano de 2023, que apresenta maior cobertura territorial devido à publicação do Atlas do Mercado de Terras. No entanto, identificaram-se sobreposições entre o Atlas e relatórios de anos adjacentes. Metodologicamente, optou-se pela prevalência dos dados dos relatórios originais em casos de conflito, visando manter a consistência da série histórica. Essa decisão justifica as lacunas observadas em alguns estados nos mapas de 2023, onde as informações do Atlas foram suprimidas em favor dos registros dos relatórios.
+
+Seguem os mapas sobre as disponibilidades dos dados dos relatórios:
+```{r}
+#| echo: false
+#| message: false
+#| warning: false
+#| results: asis 
+
+# ATENÇÃO: A opção 'results: asis' acima é OBRIGATÓRIA.
+# Sem ela, o Quarto vai achar que os textos são logs do R e não formatação.
+
+# 1. Preparação (Fora do Loop)
+br_outline <- read_country(year = 2020, showProgress = FALSE) 
+br_states  <- read_state(code_state = "all", year = 2020, showProgress = FALSE)
+anos_disponiveis <- sort(unique(df_analise$ano)) # Garante ordem cronológica
+
+# 2. Abertura do Painel de Abas (Comando Markdown via R)
+cat("::: {.panel-tabset}\n\n")
+
+# 3. Loop
+for (um_ano in anos_disponiveis) {
+  
+  # A. Cria o Título da Aba (Markdown)
+  # O \n é crucial para o Quarto entender que é um cabeçalho
+  cat("## ", um_ano, "\n\n")
+  
+  # B. Gera o Mapa
+  dados_do_ano <- subset(df_analise, ano == um_ano)
+  
+  p <- ggplot() +
+    geom_sf(data = br_outline, fill = "gray95", color = "gray90") +
+    geom_sf(data = dados_do_ano, fill = "firebrick", color = NA) + 
+    geom_sf(data = br_states, fill = NA, color = "gray40", lwd = 0.3) +
+    labs(title = paste("Coleta de dados RAMT:", um_ano), 
+         subtitle = paste(nrow(dados_do_ano), "municípios com dados"),
+         caption = "Fonte: INCRA/RAMT") +
+    theme_void() +
+    theme(plot.title = element_text(hjust = 0.5, face = "bold", color = "gray20"))
+  
+  # C. Imprime o Mapa
+  print(p)
+  
+  # D. Fecha o espaço da aba
+  cat("\n\n")
+}
+
+# 4. Fechamento do Painel
+cat(":::\n")
+```
+
+As observações variam de acordo com a quantidade de cada tipologia, a quantidade de observações para cada tipologia foi a seguinte:
+
+
+## 3. Análise e distribuições
+A estatística descritiva revela uma oscilação expressiva nos valores de VTI e VTN ao longo da série histórica. Essa volatilidade não reflete necessariamente uma tendência de mercado, mas sim a heterogeneidade espacial da coleta de dados em cada exercício. A tabela a seguir consolida as métricas de tendência central (média) e dispersão (mínimos e máximos) para ambas as categorias.
+
+```{r}
+# 1. Preparar os dados (Agregação Manual)
+tabela_pivo <- df_analise |>
+  st_drop_geometry() |>
+  group_by(ano) |>
+  summarise(
+    # Métricas para VTI
+    vti_med = mean(vti_media, na.rm = TRUE),
+    vti_min = min(vti_minimo, na.rm = TRUE),
+    vti_max = max(vti_maximo, na.rm = TRUE),
+    
+    # Métricas para VTN
+    vtn_med = mean(vtn_media, na.rm = TRUE),
+    vtn_min = min(vtn_minimo, na.rm = TRUE),
+    vtn_max = max(vtn_maximo, na.rm = TRUE),
+    
+    # Contagem (Opcional, mas bom para auditoria)
+    n_registros = n()
+  )
+
+# 2. Gerar a Tabela Profissional
+tabela_pivo |>
+  gt() |>
+  
+  # --- Cabeçalho ---
+  tab_header(
+    title = md("**Evolução Histórica de Preços (VTI vs VTN)**"),
+    subtitle = "Valores Agregados por Ano (Média Nacional e Amplitude)"
+  ) |>
+  
+  # --- Formatação Numérica (Antes de fundir) ---
+  fmt_number(
+    columns = -ano, # Formata tudo exceto o ano
+    decimals = 0,   # Sem centavos para limpar a vista
+    sep_mark = ".",
+    dec_mark = ","
+  ) |>
+  
+  # --- O PULO DO GATO: Fusão de Colunas (Pattern) ---
+  # Cria o formato: "Média (Mín - Máx)"
+  cols_merge(
+    columns = c(vti_med, vti_min, vti_max),
+    pattern = "{1} ({2} - {3})"
+  ) |>
+  cols_merge(
+    columns = c(vtn_med, vtn_min, vtn_max),
+    pattern = "{1} ({2} - {3})"
+  ) |>
+  
+  # --- Renomear as Colunas Finais ---
+  cols_label(
+    ano = "Ano",
+    vti_med = md("**VTI (R$/ha)**<br><small>Média (Mín - Máx)</small>"),
+    vtn_med = md("**VTN (R$/ha)**<br><small>Média (Mín - Máx)</small>"),
+    n_registros = "Nº Municípios"
+  ) |>
+  
+  # --- Alinhamento e Estilo ---
+  cols_align(align = "center", columns = everything()) |>
+  opt_row_striping() |> # Listras zebradas para facilitar leitura
+  tab_options(
+    table.width = pct(100), # Ocupa 100% da largura do container
+    data_row.padding = px(6)
+  )
+```
+
+A distribuição amostral revela a predominância de dados agregados ('Média Geral'), seguida pela Pecuária, refletindo a capilaridade extensiva dessa atividade no território nacional. Nota-se, contudo,  um volume expressivo de dados classificados como 'Exploração Mista', o que sugere desafios na segregação precisa do uso do solo em diversas regionai. 
+
+```{r}
+#Rever o parágrafo acima, está ruim.
+# Prevenção contra objeto SF pesado
+dados_plot <- if(inherits(df_analise, "sf")) sf::st_drop_geometry(df_analise) else df_analise
+
+ggplot(dados_plot, aes(x = fct_rev(fct_infreq(as.factor(categoria_final))), fill = as.factor(categoria_final))) +
+  geom_bar(show.legend = FALSE) +
+  
+  # Gira o gráfico
+  coord_flip() + 
+  
   labs(
-    title = "Distribuição do Valor da Terra Nua por Estado (2023)",
-    subtitle = "MÉDIA GERAL",
-    x = "Estados (Ordenados por Mediana)",
-    y = "VTI Médio (R$)"
+    title = "Contagem por categoria final",
+    x = NULL,
+    y = "Total de Observações"
+  ) +
+    theme(
+  axis.text.x = element_text(face = "bold", size = 10), # Negrito nas categorias (que estão na esquerda)
+  axis.text.y = element_text(face = "bold")             # Se quiser negrito nos números embaixo também
+) + 
+  theme_minimal()
+```
+
+natureza discreta dos dados, talvez seja melhor jogar isso para cima depois.
+```{r}
+# 1. Preparação dos dados (Garantia de Leveza)
+dados_scatter <- if(inherits(df_areas, "sf")) sf::st_drop_geometry(df_areas) else df_analise
+
+dados_agrupados <- dados_scatter |>
+  group_by(code_muni, categoria_final) |>
+  summarise(
+    n_obs = n(),
+    area_total = first(area_ha_calculada), # Usa a área corrigida do geobr
+    .groups = "drop"
+  ) |>
+  # Filtro de segurança para log
+  filter(n_obs > 0, area_total > 0)
+
+# 2. Plot com Correção de Jitter
+ggplot(dados_agrupados, aes(x = area_total, y = n_obs)) +
+  
+  # A CORREÇÃO ESTÁ AQUI:
+  # width = 0 (Não mexe na Área, que é precisa)
+  # height = 0.2 (Espalha o N verticalmente para desfazer a linha reta)
+  geom_jitter(aes(color = categoria_final), alpha = 0.4, width = 0, height = 0.2) +
+  
+  # Escalas Logarítmicas
+  scale_x_log10(labels = scales::label_number(scale_cut = scales::cut_short_scale())) +
+  # Breaks manuais para facilitar leitura no log
+  scale_y_log10(breaks = c(1, 2, 5, 10, 20, 50, 100)) +
+  
+  # Linha de Tendência (Regressão Linear no Log)
+  geom_smooth(method = "lm", color = "black", linetype = "dashed", se = FALSE, size = 0.5) +
+  
+  facet_wrap(~categoria_final, scales = "free") +
+  
+  labs(
+    title = "Densidade Amostral: Área vs. Observações (Ajustado)",
+    subtitle = "Dispersão com Jitter para visualizar concentração em N=1",
+    x = "Área da Zona (ha) [Log]",
+    y = "Nº de Observações [Log]"
   ) +
   theme_minimal() +
-  theme(axis.text.x = element_text(angle = 90, vjust = 0.5)) 
+  theme(legend.position = "none")
+```
+
+Valor de terra por Quantil:
+
+```{r}
+#| echo: false
+#| message: false
+#| warning: false
+
+library(dplyr)
+library(gt)
+
+# 1. Cálculo dos Quantis por Categoria
+tabela_quantis <- df_analise |>
+  st_drop_geometry() |>
+  filter(!is.na(vti_media), vti_media > 0) |>
+  group_by(categoria_final) |>
+  summarise(
+    N = n(),
+    # Calcula os cortes de preço que dividem o mercado
+    P10 = quantile(vti_media, 0.10),
+    P25 = quantile(vti_media, 0.25),
+    Mediana = median(vti_media),
+    P75 = quantile(vti_media, 0.75),
+    P90 = quantile(vti_media, 0.90)
+  ) |>
+  arrange(desc(Mediana)) # Ordena do mais caro para o mais barato
+
+# 2. Renderização da Tabela
+tabela_quantis |>
+  gt() |>
+  tab_header(
+    title = md("**Estrutura de Preços: Distribuição por Quantis**"),
+    subtitle = "Valores de Terra (VTI) em R$/ha"
+  ) |>
+  fmt_number(
+    columns = c(P10, P25, Mediana, P75, P90),
+    decimals = 0,
+    sep_mark = ".",
+    dec_mark = ","
+  ) |>
+  cols_label(
+    categoria_final = "Categoria",
+    N = "Amostras",
+    P10 = "Piso (10%)",
+    P25 = "Baixo (25%)",
+    Mediana = "Médio (50%)",
+    P75 = "Alto (75%)",
+    P90 = "Teto (90%)"
+  ) |>
+  # Destaque visual para a Mediana (o valor mais provável)
+  tab_style(
+    style = list(
+      cell_text(weight = "bold", color = "black"),
+      cell_fill(color = "lightgray")
+    ),
+    locations = cells_body(columns = Mediana)
+  ) |>
+  data_color(
+    columns = c(Mediana),
+    method = "numeric",
+    palette = "Greens" # Escala de cor para mostrar quem vale mais
+  )
 ```
